--- a/service-details.html
+++ b/service-details.html
@@ -36,9 +36,9 @@
   ======================================================== -->
 </head>
 
-<body class="service-details-page bg-dark text-light">
+<body class="service-details-page bg-light text-dark">
   <main class="main">
-    <nav class="navbar text-light navbar-light bg-dark ">
+    <nav class="navbar text-light navbar-light bg-light ">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
