--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -93,8 +93,8 @@
           <h1 data-aos="fade-up">Chào mừng đến với <span>Fairy Tails</span></h1>
           <p data-aos="fade-up" data-aos-delay="100">Cùng chúng tôi sáng tạo lên những câu truyện tuyệt vời<br></p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#about" class="btn-get-started">Bắt đầu</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Tutorial</span></a>
+            <a href="service-details.html" class="btn-get-started">Bắt đầu</a>
+            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Xem hướng dẫn</span></a>
           </div>
           <img src="assets/img/header/undraw_reading_time_re_phf7.svg" class="img-fluid hero-img" alt="" data-aos="zoom-out" data-aos-delay="300">
         </div>
@@ -106,15 +106,14 @@
     <section id="featured-services" class="featured-services section light-background">
 
       <div class="container">
-
         <div class="row gy-4">
-
           <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
               <div>
                 <h4 class="title"><a href="#" class="stretched-link">Lorem Ipsum</a></h4>
-                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                <p class="description">Fully AI powered
+                  video generator</p>
               </div>
             </div>
           </div>
