--- a/service-details.html
+++ b/service-details.html
@@ -26,6 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/service-details.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: QuickStart
@@ -36,7 +37,7 @@
   ======================================================== -->
 </head>
 
-<body class="service-details-page bg-light text-dark">
+<body class="service-details-page bg-dark text-light">
   <main class="main">
     <nav class="navbar text-light navbar-light bg-light ">
       <div class="container-fluid">
@@ -79,117 +80,127 @@
         </div>
       </div>
     </nav>
-    <div class="container ">
-      <form method="" action="/">
-        <h2 class="text-light">Background & character</h2>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="Countryside" >
-          <label class="form-check-label" for="Countryside">
-            Countryside
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="City" >
-          <label class="form-check-label" for="City">
-            City
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="RoyalPalace" >
-          <label class="form-check-label" for="RoyalPalace">
-            Royal palace
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="SmallGroup" >
-          <label class="form-check-label" for="SmallGroup">
-            In a small group
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="LargeGroup" >
-          <label class="form-check-label" for="LargeGroup">
-            In a large group
-          </label>
-        </div>
-        <div class="form-floating ">
-          <textarea class="form-control bg-dark" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-          <label for="floatingTextarea2">Character </label>
-        </div>
-        <h2>Lessons</h2>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
-            Brave
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="check1" checked>
-          <label class="form-check-label" for="check1">
-            Friendship
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="check2" checked>
-          <label class="form-check-label" for="check2">
-            Family love
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="check3" checked>
-          <label class="form-check-label" for="check3">
-            Love for animals
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="check4" checked>
-          <label class="form-check-label" for="check4">
-            Humble
-          </label>
-        </div>
-        <h2>Age range</h2>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="AgeRange">
-          <label class="form-check-label" for="AgeRange">
-            3 - 6
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="AgeRange2" >
-          <label class="form-check-label" for="AgeRange2">
-            6 - 9
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="AgeRange3" >
-          <label class="form-check-label" for="AgeRange3">
-            9 - 11
-          </label>
+    <div class="container container-edit-size ">
+      <form method="/" action="/">
+        <h2 class="mt-5 mb-4 text-center">Background & character</h2>
+        <div class="d-flex img-fluid">
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="Countryside" >
+            <label class="form-check-label" for="Countryside">
+              Countryside
+            </label>
+          </div>
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="City" >
+            <label class="form-check-label" for="City">
+              City
+            </label>
+          </div>
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="RoyalPalace" >
+            <label class="form-check-label" for="RoyalPalace">
+              Royal palace
+            </label>
+          </div>
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="SmallGroup" >
+            <label class="form-check-label" for="SmallGroup">
+              In a small group
+            </label>
+          </div>
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="LargeGroup" >
+            <label class="form-check-label" for="LargeGroup">
+              In a large group
+            </label>
+          </div>
         </div>
 
-        <h2>Size Type</h2>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="Short">
-          <label class="form-check-label" for="Short">
-            Short
-          </label>
+        <h2 class="mt-5 mb-2 text-center">Character</h2>
+        <div class="form-floating w-100 m-auto text-area align-items-center">
+          <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
         </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="Medium" >
-          <label class="form-check-label" for="Medium">
-            Medium
-          </label>
+
+        <h2 class="mt-5 mb-4 text-center">Lessons</h2>
+        <div class="">
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Brave
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" value="" id="check1" >
+            <label class="form-check-label" for="check1">
+              Friendship
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" value="" id="check2" >
+            <label class="form-check-label" for="check2">
+              Family love
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" value="" id="check3" >
+            <label class="form-check-label" for="check3">
+              Love for animals
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" value="" id="check4" >
+            <label class="form-check-label" for="check4">
+              Humble
+            </label>
+          </div>
         </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="Long" >
-          <label class="form-check-label" for="Long">
-            Long
-          </label>
+
+        <h2 class="mt-5 mb-4 text-center">Age range</h2>
+        <div class="">
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="AgeRange">
+            <label class="form-check-label" for="AgeRange">
+              3 - 6
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="AgeRange2" >
+            <label class="form-check-label" for="AgeRange2">
+              6 - 9
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="AgeRange3" >
+            <label class="form-check-label" for="AgeRange3">
+              9 - 11
+            </label>
+          </div>
+        </div>
+
+        <h2 class="mt-5 mb-4 text-center">Size Type</h2>
+        <div class="">
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="Short">
+            <label class="form-check-label" for="Short">
+              Short
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="Medium" >
+            <label class="form-check-label" for="Medium">
+              Medium
+            </label>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="Long" >
+            <label class="form-check-label" for="Long">
+              Long
+            </label>
+          </div>
         </div>
 
         <button class="btn bg-light">submit</button>
       </form>
-
     </div>
   </main>
   <!-- Scroll Top -->
